# wallaby

./: .env.enc  .gitignore  Dockerfile  Readme.md  Todo.md  docker-compose.yml  pyproject.toml  settings.py  setup.sh  slackbot_settings.py  spread_sheets_client.py  todo.py  todo_handler.py
.github/workflows/: prod.yml
env/: secrets.json.enc
plugins/: hello.py  todo_display.py
test/: test_sheets_client.py  test_todo_handler.py  test_todo_objects.py
